# cdd-context

./: .gitignore  README.md  pyproject.toml
cdd_context/: .contextignore.default  cache.py  cli.py  generator.py  scanner.py  summarizer.py
contracts/: cache.yaml  cli.yaml  generator.yaml  project.yaml  scanner.yaml  summarizer.yaml
fixtures/: file_with_private_key.py  large_file.py  sample_with_functions.py
fixtures/non_git_project_with_contextignore_negation/: .contextignore
fixtures/project_with_env/: app.py
fixtures/project_with_gitignore/: tracked.py
fixtures/project_with_gitignore_negation/: .gitignore  code.py  important.env
tests/: setup_fixtures.py  test_cache.py  test_cli.py  test_generator.py  test_scanner.py  test_summarizer.py
