[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdd-context"
version = "0.3.0"
description = "Generate LLM context files for codebases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gareth Dyne"}
]
keywords = ["llm", "context", "claude", "ai", "cdd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "cdd-tooling",
]

[project.scripts]
cdd-context = "cdd_context.cli:main"

[project.urls]
Homepage = "https://github.com/thegdyne/cdd-context"
Repository = "https://github.com/thegdyne/cdd-context"
Issues = "https://github.com/thegdyne/cdd-context/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdd_context*"]

[tool.setuptools.package-data]
cdd_context = ["*.default"]
